--- a/docker/supervisor/conf.d/php-fpm.conf
+++ b/docker/supervisor/conf.d/php-fpm.conf
@@ -1,5 +1,5 @@
 [program:php]
-command=php-fpm -c /etc/php/7.1/fpm/php.ini -y /etc/php/7.1/fpm/php-fpm.conf
+command=php-fpm7.4 -c /etc/php/7.4/fpm/php.ini -y /etc/php/7.4/fpm/php-fpm.conf
 #numprocs=1
 autostart=true
 autorestart=true
