--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -11,15 +11,11 @@ services:
     ports:
       - "80:80"
       - "443:443"
-      - "81:81"
-      - "82:82"
-      - "83:83"
-      - "84:84"
     volumes:
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/ssl:/etc/nginx/ssl
-      - ./../:/var/www/html/yii2-app-advanced-template
+      - ./../:/var/www/html/fate
       - ./log/nginx:/var/log/nginx
     restart: always
     container_name: nginx
@@ -29,7 +25,7 @@ services:
     build:
       context: ./php
       dockerfile: Dockerfile
-    image: php:bao
+    image: php74-fpm
     volumes:
       - ./../:/var/www/html/yii2-app-advanced-template
       - ./php/fpm/php-fpm.conf:/etc/php/7.4/fpm/php-fpm.conf
@@ -43,18 +39,4 @@ services:
     restart: always
     container_name: php
 
-  drone-runner:
-    network_mode: "host"
-    container_name: drone-runner
-    image: drone/drone-runner-docker:1
-    restart: always
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock:rw
-      - ./../:/var/www/html/bao
-    environment:
-      - TZ=Asia/Taipei
-      - DRONE_RPC_PROTO=http
-      - DRONE_RPC_SECRET=12c8f8482b33f902a40495d52e206a53
-      - DRONE_RPC_HOST=drone.obolpay.com:8080
-      - DRONE_RUNNER_CAPACITY=3
 
