--- a/docker/supervisor/conf.d/php-fpm.conf
+++ b/docker/supervisor/conf.d/php-fpm.conf
@@ -1,8 +1,20 @@
 [program:php]
 command=php-fpm7.4 -c /etc/php/7.4/fpm/php.ini -y /etc/php/7.4/fpm/php-fpm.conf
-#numprocs=1
+numprocs=1
 autostart=true
 autorestart=true
 startretries=3
 redirect_stderr=true
 stdout_logfile=/etc/supervisord.d/log/supervisord-php.log
+
+#[program:workerman]
+#command=php /var/www/html/sb_php/workerman init -s restart
+#numprocs=1
+#stopsignal=INT
+#autostart=true
+#autorestart=true
+#startretries=3
+#redirect_stderr=true
+#stopasgroup=true
+#killasgroup=true
+#stdout_logfile=/etc/supervisord.d/log/workerman.log
