--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -6,6 +6,7 @@ user nginx;
 worker_processes auto;
 error_log /var/log/nginx/error.log;
 pid /run/nginx.pid;
+worker_rlimit_nofile 65535;
 
 # Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
 include /usr/share/nginx/modules/*.conf;
@@ -17,12 +18,30 @@ events {
 }
 
 http {
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+#    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+#                      '$status $body_bytes_sent "$http_referer" '
+#                      '"$http_user_agent" "$http_x_forwarded_for"';
+#    access_log  /var/log/nginx/access.log  main;
 
-    access_log  /var/log/nginx/access.log  main;
+    #將真實用戶IP轉為$ClientRealIp
+    map $http_x_forwarded_for $clientRealIp {
+    ""      $remote_addr;
+    ~^(?P<firstAddr>[0-9\.]+),?.*$  $firstAddr;
+    }
 
+    # 抓取 X-Forwarded-Proto 參數 檢查是否為 https
+    map $http_x_forwarded_proto $detect_https {
+        default "";
+        https "on";
+    }
+
+     log_format custom '$clientRealIp - $remote_user [$time_local] '
+                    '"$request" $status $body_bytes_sent '
+                    '"$http_referer" "$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  custom;
+
+    server_tokens       off;
     sendfile            on;
     tcp_nopush          on;
     tcp_nodelay         on;
@@ -32,10 +51,16 @@ http {
     include             /etc/nginx/mime.types;
     default_type        application/octet-stream;
 
+    #header, cookie 大小
+    client_header_buffer_size 16k;
+    large_client_header_buffers 8 128k;
+    proxy_buffers         8 128k;
+    proxy_buffer_size     128k;
+
     #上傳檔案大小
     client_max_body_size 20M;
-    fastcgi_buffers      8 4K;
-    fastcgi_buffer_size  4K;
+    fastcgi_buffers      8 128k;
+    fastcgi_buffer_size  128k;
 
     #gzip壓縮
     gzip on;
